:package: Função de ações inial do jogo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="fundoGame">
             <div id="inicio">
             <h1>Game Resgate</h1>
-            <h3>Forma de controlar o helicóptero</h3>
+            <h3>Controlando o helicóptero</h3>
             <p>
                 Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar o helicóptero para baixo e a tecla D para atirar.
             </p>
@@ -20,5 +20,7 @@
             </div>
         </div>
     </div>
+<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="js/js.js"></script>
 </body>
 </html>
