:package: Função iniciar jogo e animações

--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/estilos.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>Game Resgate</title>
 </head>
 <body>
     <div id="container">
         <div id="fundoGame">
-            <div id="inicio">
-            <h1>Game Resgate</h1>
-            <h3>Controlando o helicóptero</h3>
-            <p>
-                Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar o helicóptero para baixo e a tecla D para atirar.
-            </p>
-            <p>Clique aqui para iniciar!!!</p>
+            <div id="inicio" onclick="start()">
+                <h1>Game Resgate</h1>
+                <p>
+                    Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar o helicóptero para baixo e a tecla D para atirar.
+                </p>
+                <p>Clique aqui para iniciar!!!</p>
             </div>
         </div>
     </div>
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="js/js.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
