--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     </div>
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/jquery-collision.min.js"></script>
 </body>
 </html>
