--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>Game Resgate</title>
+    <meta charset="UFT-8"> 
+    <title>Resgate</title>
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
     <div id="container">
         <div id="fundoGame">
             <div id="inicio" onclick="start()">
-                <h1>Game Resgate</h1>
-                <p>
-                    Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar o helicóptero para baixo e a tecla D para atirar.
-                </p>
-                <p>Clique aqui para iniciar!!!</p>
+                <h1> Resgate </h1>
+                <p>Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar o helicóptero para baixo e a tecla D para atirar</p>
+                <p>Clique aqui para iniciar!!</p>
             </div>
         </div>
-    </div>
-<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
-<script type="text/javascript" src="js/jquery-collision.min.js"></script>
+    </div> 
+
+    <audio src="sons/som.mp3" preload="auto" id="somDisparo"></audio>
+    <audio src="sons/explosao.mp3" preload="auto" id="somExplosao"></audio>
+    <audio src="sons/musica_fundo.mp3" preload="auto" id="musica"></audio>
+    <audio src="sons/gameover.mp3" preload="auto" id="somGameover"></audio>
+    <audio src="sons/perdido.mp3" preload="auto" id="somPerdido"></audio>	
+    <audio src="sons/resgate.mp3" preload="auto" id="somResgate"></audio>
+
+    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery-collision.min.js"></script>
+    <script type="text/javascript" src="js/js.js"></script>
 </body>
 </html>
